# syndex

./: Cargo.toml  README.md  devbox.json  justfile
.github/workflows/: cd.yml
egglog_syntax/: Cargo.toml
egglog_syntax/src/: lib.rs
resources/egglog/: llhd_demorgans_theorem.egg  llhd_dfg.egg  llhd_dfg_div_extract_w_placement.egg  llhd_dfg_example1.egg  llhd_dfg_example2.egg  llhd_dfg_example2_facts.egg  llhd_dfg_example2_rules_updated.egg  llhd_dfg_example2_schedule.egg  llhd_dfg_example2_schedule_updated.egg  llhd_dfg_example2_sorts.egg  llhd_dfg_example2_sorts_updated.egg  llhd_dfg_nested_expr.egg  llhd_dfg_sort.egg  llhd_div_extract.egg  llhd_div_extract_schedule.egg  math_example.egg
resources/lef_examples/: lef_def_lang_reference_example.lef
resources/llhd/: 2and_1or.llhd  2and_1or_common.llhd  testbench_example1.llhd  testbench_paper.llhd
resources/spice3f5_examples/: mosamp2.cir
src/: circuit.rs  egraph.rs  engine.rs  index.rs  lib.rs  libreda.rs  llhd.rs  llhd_egraph.rs  llhd_library.rs  llhd_world.rs  main.rs  synthesis.rs  synthesis_state.rs  world.rs
src/circuit/: elements.rs  equations.rs  evalexpr_doc_example.rs  graph.rs  hypergraph_doc_example.rs  macros.rs  mhgl_doc_example.rs  netlist.rs  nodes.rs  spice.rs
src/circuit/elements/: capacitor.rs  resistor.rs  transistor.rs
src/circuit/graph/: edges.rs  nodes.rs  spice.rs
src/circuit/spice/: peginator_doc_example.rs
src/egraph/: builder.rs  datatype.rs  egglog_names.rs  facts.rs  inst.rs  llhd.rs  macros.rs  rules.rs  schedule.rs  sorts.rs  unit.rs
src/egraph/inst/: opcode.rs
src/engine/: lattice.rs  program_builder.rs
src/engine/lattice/: program_analysis.rs
src/engine/program_builder/: control_flow_example.rs  demorgans_example.rs  divisor_extraction.rs
src/index/: category.rs  macros.rs  unit.rs
src/libreda/: hierarchy.rs
src/llhd/: common.rs  components.rs  enode.rs  inst.rs  libreda_module.rs  module.rs  unit.rs
src/llhd/components/: inst.rs  unit.rs
src/llhd/inst/: egraph.rs  utils.rs
src/llhd/unit/: egraph.rs  utils.rs
src/llhd_egraph/: datatype.rs  egglog_names.rs  inst.rs  llhd.rs  rules.rs  schedules.rs  unit.rs
src/llhd_egraph/inst/: opcode.rs
src/llhd_library/: circuit_library.rs  circuit_library_peginator.rs  gds_library.rs  lef_library.rs
src/llhd_library/circuit_library/: peg_doc_example.rs  peginator_doc_example.rs
src/llhd_world/: bevy_example.rs  components.rs  initializer.rs  macros.rs  world.rs
src/llhd_world/components/: block.rs  inst.rs  unit.rs  value.rs
src/synthesis/: macros.rs  monad.rs
src/synthesis_state/: typestate_doc_example.rs
tests/: common.rs  flecs_example_test.rs  integration_tests.rs  libreda_db_example_test.rs  llhd_example_test.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
