[package]
name = "syndex"
version = "0.1.0"
authors = ["Phillip Bonhomme <phillip.bonhomme@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
description = ""
# documentation = ""
# homepage = ""
repository = ""
license = "MIT OR Apache-2.0"
keywords = ["syndex"]
# categories = []

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]
serde = { version = "1", default-features = false, features = ["serde_derive"] }
envy = "0.4"
once_cell = "1"
libreda-db = { version = "0.0.10", features = ["serde"] }
llhd = "0.16.0"
itertools = "0.12.1"
rayon = "1.8.1"
bevy_ecs = "0.13.2"
bevy_hierarchy = "0.13.2"
ascent = "0.6.0"
evalexpr = "11.3.0"
typed-builder = "0.18.2"
derive-getters = "0.4.0"
typestate = "0.8.0"
euclid = "0.22.10"
mhgl = "0.2.2"
layout21 = "3.0.0-pre.2"
peginator = "0.7.0"
peginator_macro = "0.7.0"
egglog = "0.2.0"

[dev-dependencies]
criterion = "0.4"
indoc = "2.0.4"
petgraph = "0.6.4"
pretty_assertions = "1"
test-log = "0.2.13"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
